Actions
Bug #4839
closed3294 generated elfdump struct layouts by hand, shouldn't have
Start date:
2014-05-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
In elfdump, we have a tool that generates the structure layout definitions for us. 3294 didn't use it when adding prfdinfo_t, which makes it a tiny bit more tedious when adding future structures (as the diffs are larger). The tool should be updated (and the layout code updated to be the code it generates).
Updated by Electric Monk almost 8 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 894fa7ba71de90ec2b4a468b77d5d20d75299104
commit 894fa7ba71de90ec2b4a468b77d5d20d75299104 Author: Richard Lowe <richlowe@richlowe.net> Date: 2014-05-27T19:59:39.000Z 4839 3294 generated elfdump struct layouts by hand, shouldn't have Reviewed by: Josef 'Jeff' Sipek <josef.sipek@nexenta.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions