4839 3294 generated elfdump struct layouts by hand, shouldn't have